--- a/index.html
+++ b/index.html
@@ -3,29 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 <title>Newton - Resume</title>
 </head>
 <body>
-
-
-
-<nav>
-    <img src="logo.png" alt="Logo" class="logo">
-    <a href="#about">about</a>
-    <a href="#experience">experience</a>
-    <a href="#project">project</a>
-    <a href="#contact">contact</a>
-</nav>
-
-<div class="container">
-   
-
-    <div class="main-content">
-        <h2>Hi, I'm  Newton</h2>
-        <p>I am a Student</p>
+    <div class="container">
+        <header class="bar">
+            <img src="logo.png" alt="Logo" class="logo">
+            <nav class="nav-links">
+              <ul>
+                <li><a href="#about" class="nav-item">About</a></li>
+                <li><a href="#experience" class="nav-item">Experience</a></li>
+                <li><a href="#project" class="nav-item">Project</a></li>
+                <li><a href="#contact" class="nav-item">Contact</a></li>
+              </ul>
+            </nav>
+        
+            <span class="resume-button">
+              <a class="btn1" href="#"><button>Resume</button></a>
+              <a class="btn2" href="#"><button>Hire Me</button></a>
+            </span>
+          </header>
+        
+          <div class="bread">
+            <div class="main-content">
+              <span><h1>Hi, I'm Newton</h1></span>
+                   <p> Frontend Developer</p>
+            </div>
+          </div>
     </div>
 
-</div>
 
 </body>
 </html>
