--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         
           <div class="bread">
             <div class="main-content">
-              <span><h1>Hi, I'm Newton</h1></span>
-                   <p> Frontend Developer</p>
+                <h1>Hi, I'm Newton</h1>
+                <p>Frontend Developer</p>
             </div>
-          </div>
+        </div>
+        
     </div>
 
 
