--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <title>Newton - Resume</title>
 </head>
 <body>
@@ -28,7 +29,9 @@
           <div class="bread">
             <div class="main-content">
                 <h1>Hi, I'm Newton</h1>
-                <p>Frontend Developer</p>
+                <p>Frontend Developer</p> <br><br><br>
+                
+                <i class="fa-solid fa-angles-down"></i>
             </div>
         </div>
         
