--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <header class="bar">
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="icon\Nicon.jpg" alt="Logo" class="logo">
+           
             <nav class="nav-links">
               <ul>
                 <li><a href="#about" class="nav-item">About</a></li>
