started 2nd page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,25 @@
                 <i class="fa-solid fa-angles-down"></i>
             </div>
         </div>
-        
-    </div>
+
+        <div class="container1">
+            <h1 class="title">About Me</h1>
+        </div>
+
+        <div class="myself">
+
+              <div class="decription">
+                <p> Newton is a student at Chittagong University of Engineering and Technology (CUET), enrolled in the Computer Science and Engineering (CSE) department. As a student in this field, Newton likely has a passion for technology, programming, and problem-solving. Being at CUET, Newton has access to quality education and resources to further their knowledge and skills in computer science.</p>
+                <p> Newton is a student at Chittagong University of Engineering and Technology (CUET), enrolled in the Computer Science and Engineering (CSE) department. As a student in this field, Newton likely has a passion for technology, programming, and problem-solving. Being at CUET, Newton has access to quality education and resources to further their knowledge and skills in computer science.</p>
+                <p>Newton is a student at Chittagong University of Engineering and Technology (CUET), enrolled in the Computer Science and Engineering (CSE) department. As a student in this field, Newton likely has a passion for technology, programming, and problem-solving. Being at CUET, Newton has access to quality education and resources to further their knowledge and skills in computer science.</p>
+              </div>
+
+              <div class="profile">
+             <img src="" alt="profile">
+              </div>
+        </div>
+
+         
 
 
 </body>
