--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <div class="bread">
             <div class="main-content">
                 <h1>Hi, I'm Newton</h1>
-                <p>Frontend Developer</p> <br><br><br>
+                <h4>Frontend Developer</h4> <br><br><br>
                 
-                <i class="fa-solid fa-angles-down"></i>
+               <a href="#about"> <i class="fa-solid fa-angles-down"></i></a>
             </div>
         </div>
-
-        <div class="container1">
+       <div  class ="about_page ">
+        <div id="about" class="container1">
             <h1 class="title">About Me</h1>
         </div>
 
@@ -49,8 +49,9 @@
               </div>
 
               <div class="profile">
-             <img src="" alt="profile">
+             <img class ="picture" src="icon\NEWTon.PNG" alt="profile">
               </div>
+        </div>
         </div>
 
          
