--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="bread">
             <div class="main-content">
                 <h1>Hi, I'm Newton</h1>
-                <h4>Frontend Developer</h4> <br><br><br><br><br><br><br>
+                <h4>I design and build things</h4> <br><br><br><br><br><br><br>
                 
                <a href="#about"> <i class="fa-solid fa-angles-down"></i></a>
             </div>
@@ -43,9 +43,9 @@
         <div class="myself">
 
               <div class="description">
-                <p> Newton is a student at Chittagong University of Engineering and Technology (CUET), enrolled in the Computer Science and Engineering (CSE) department. As a student in this field, Newton likely has a passion for technology, programming, and problem-solving. Being at CUET, Newton has access to quality education and resources to further their knowledge and skills in computer science.</p>
-                <p> Newton is a student at Chittagong University of Engineering and Technology (CUET), enrolled in the Computer Science and Engineering (CSE) department. As a student in this field, Newton likely has a passion for technology, programming, and problem-solving. Being at CUET, Newton has access to quality education and resources to further their knowledge and skills in computer science.</p>
-                <p>Newton is a student at Chittagong University of Engineering and Technology (CUET), enrolled in the Computer Science and Engineering (CSE) department. As a student in this field, Newton likely has a passion for technology, programming, and problem-solving. Being at CUET, Newton has access to quality education and resources to further their knowledge and skills in computer science.</p>
+                <p> My name is Newton, and I'm currently pursuing Computer Science and Engineering at Chittagong University of Engineering and Technology. I have a fervent interest in competitive programming, continually pushing my boundaries by tackling problems from diverse online judges.</p>
+                <p>One aspect I particularly enjoy is brainstorming problems. I love exploring different ideas and collaborating with others to find the best solutions. This skill is invaluable in both mathematics and computer science, fostering creativity and teamwork. .Mathematics has been a source of fascination for me, and I delight in delving into its complexities. Lately, my enthusiasm for programming has soared as I recognize its profound capability for problem-solving and fostering creativity.</p>
+                <p>I see programming as a powerful tool for problem-solving and creativity. Whether it's optimizing algorithms or developing innovative projects, programming allows me to translate abstract ideas into tangible solutions. At Spring Rain Pvt Ltd., where I'm currently engaged in career development, I have the opportunity to apply my skills to real-world projects and contribute to innovative solutions.</p>
               </div>
 
               <div class="profile">
