Implemented a navigation menu that expands and collapses when clicked.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
               <ul>
                 <li><a href="#about" class="nav-item">about</a></li>
                 <li><a href="#experience" class="nav-item">experience</a></li>
-                <li><a href="#project" class="nav-item">project</a></li>
+                  <li class="navbar">
+                  <a class="menu-toggle" onclick="toggleMenu()" >project</a>
+                  <ul class="menu-items" id="menuItems">
+                    <li><a href="#">project1</a></li>
+                    <li><a href="#">project2</a></li>
+                    <li><a href="#">project3</a></li>
+                  
+                  </ul>
+                </li>  
                 <li><a href="#contact" class="nav-item" >contact</a></li>
               </ul>
             </nav>
