fetehed data from api

--- a/worker/api.html
+++ b/worker/api.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Information</title>
   <link rel="stylesheet" href="apistyle.css">
-  
 </head>
 <body>
 
 <div class="outer-container">
   <div class="container">
-    <button id="showUserButton">Show User</button>
+    <button id="showUserButton">Show Users</button>
     <div class="user-info-container" id="userInfoContainer"></div>
   </div>
 </div>
