added to portfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <li class="navbar">
                   <a class="menu-toggle" onclick="toggleMenu()" >project</a>
                   <ul class="menu-items" id="menuItems">
-                    <li><a href="#">project1</a></li>
+                    <li><a href="worker\api.html">project1</a></li>
                     <li><a href="#">project2</a></li>
                     <li><a href="#">project3</a></li>
                   
